cmake_minimum_required(VERSION 3.26)
project(dataStructure_Main)

set(CMAKE_CXX_STANDARD 17)

add_executable(dataStructure_Main main.cpp)

#顺序表
add_executable(dataStructure_Main_sqlist_1 sqlis/1.cpp)
add_executable(dataStructure_Main_sqlist_2 sqlis/2.cpp)
add_executable(dataStructure_Main_sqlist_3 sqlis/3.cpp)
add_executable(dataStructure_Main_sqlist_4 sqlis/4.cpp)
add_executable(dataStructure_Main_sqlist_5 sqlis/5.cpp)
add_executable(dataStructure_Main_sqlist_6 sqlis/6.cpp)
add_executable(dataStructure_Main_sqlist_7 sqlis/7.cpp)
add_executable(dataStructure_Main_sqlist_8 sqlis/8.cpp)
add_executable(dataStructure_Main_sqlist_9 sqlis/9.cpp)
add_executable(dataStructure_Main_sqlist_10 sqlis/10.cpp)
add_executable(dataStructure_Main_sqlist_11 sqlis/11.cpp)

#链表
add_executable(dataStructure_Main_Linklist_1 Linklist/1.cpp)
add_executable(dataStructure_Main_Linklist_2 Linklist/2.cpp)
add_executable(dataStructure_Main_Linklist_3 Linklist/3.cpp)
add_executable(dataStructure_Main_Linklist_4 Linklist/4.cpp)
add_executable(dataStructure_Main_Linklist_5 Linklist/5.cpp)
add_executable(dataStructure_Main_Linklist_6 Linklist/6.cpp)
add_executable(dataStructure_Main_Linklist_7 Linklist/7.cpp)
add_executable(dataStructure_Main_Linklist_8 Linklist/8.cpp)
add_executable(dataStructure_Main_Linklist_9 Linklist/9.cpp)
add_executable(dataStructure_Main_Linklist_10 Linklist/10.cpp)
add_executable(dataStructure_Main_Linklist_11 Linklist/11.cpp)
add_executable(dataStructure_Main_Linklist_12 Linklist/12.cpp)
add_executable(dataStructure_Main_Linklist_13 Linklist/13.cpp)
add_executable(dataStructure_Main_Linklist_14 Linklist/14.cpp)
add_executable(dataStructure_Main_Linklist_15 Linklist/15.cpp)
add_executable(dataStructure_Main_Linklist_16 Linklist/16.cpp)
add_executable(dataStructure_Main_Linklist_17 Linklist/17.cpp)
add_executable(dataStructure_Main_Linklist_18 Linklist/18.cpp)
add_executable(dataStructure_Main_Linklist_19 Linklist/19.cpp)
add_executable(dataStructure_Main_Linklist_20 Linklist/20.cpp)
add_executable(dataStructure_Main_Linklist_21 Linklist/21.cpp)
add_executable(dataStructure_Main_Linklist_22 Linklist/22.cpp)
add_executable(dataStructure_Main_Linklist_23 Linklist/23.cpp)
add_executable(dataStructure_Main_Linklist_24 Linklist/24.cpp)

#栈和队列,串
add_executable(dataStructure_Main_stack_1 stack/1.cpp)
add_executable(dataStructure_Main_stack_2 stack/2.cpp)
add_executable(dataStructure_Main_stack_3 stack/3.cpp)
add_executable(dataStructure_Main_stack_4 stack/4.cpp)
add_executable(dataStructure_Main_stack_5 stack/5.cpp)
add_executable(dataStructure_Main_stack_6 stack/6.cpp)
add_executable(dataStructure_Main_stack_7 stack/7.cpp)

#树
add_executable(dataStructure_Main_BiTree_1 BiTree/1.cpp)
add_executable(dataStructure_Main_BiTree_2 BiTree/2.cpp)
add_executable(dataStructure_Main_BiTree_3 BiTree/3.cpp)
add_executable(dataStructure_Main_BiTree_4 BiTree/4.cpp)
add_executable(dataStructure_Main_BiTree_5 BiTree/5.cpp)
add_executable(dataStructure_Main_BiTree_6 BiTree/6.cpp)
add_executable(dataStructure_Main_BiTree_7 BiTree/7.cpp)
add_executable(dataStructure_Main_BiTree_8 BiTree/8.cpp)
add_executable(dataStructure_Main_BiTree_9 BiTree/9.cpp)
add_executable(dataStructure_Main_BiTree_10 BiTree/10.cpp)
add_executable(dataStructure_Main_BiTree_11 BiTree/11.cpp)
add_executable(dataStructure_Main_BiTree_12 BiTree/12.cpp)
add_executable(dataStructure_Main_BiTree_13 BiTree/13.cpp)
add_executable(dataStructure_Main_BiTree_14 BiTree/14.cpp)
add_executable(dataStructure_Main_BiTree_15 BiTree/15.cpp)
add_executable(dataStructure_Main_BiTree_16 BiTree/16.cpp)
add_executable(dataStructure_Main_BiTree_17 BiTree/17.cpp)
add_executable(dataStructure_Main_BiTree_18 BiTree/18.cpp)
add_executable(dataStructure_Main_BiTree_19 BiTree/19.cpp)
add_executable(dataStructure_Main_BiTree_20 BiTree/20.cpp)
add_executable(dataStructure_Main_BiTree_21 BiTree/21.cpp)
add_executable(dataStructure_Main_BiTree_22 BiTree/22.cpp)
add_executable(dataStructure_Main_BiTree_23 BiTree/23.cpp)
add_executable(dataStructure_Main_BiTree_24 BiTree/24.cpp)
add_executable(dataStructure_Main_BiTree_25 BiTree/25.cpp)
add_executable(dataStructure_Main_BiTree_26 BiTree/26.cpp)
add_executable(dataStructure_Main_BiTree_27 BiTree/27.cpp)
add_executable(dataStructure_Main_BiTree_28 BiTree/28.cpp)
add_executable(dataStructure_Main_BiTree_29 BiTree/29.cpp)
add_executable(dataStructure_Main_BiTree_30 BiTree/30.cpp)
add_executable(dataStructure_Main_BiTree_31 BiTree/31.cpp)
add_executable(dataStructure_Main_BiTree_32 BiTree/32.cpp)
add_executable(dataStructure_Main_BiTree_33 BiTree/33.cpp)
add_executable(dataStructure_Main_BiTree_34 BiTree/34.cpp)
add_executable(dataStructure_Main_BiTree_35 BiTree/35.cpp)
add_executable(dataStructure_Main_BiTree_36 BiTree/36.cpp)
add_executable(dataStructure_Main_BiTree_37 BiTree/37.cpp)

# 图
add_executable(dataStructure_Main_glaph_1 graph/1.cpp)
add_executable(dataStructure_Main_glaph_2 graph/2.cpp)
add_executable(dataStructure_Main_glaph_3 graph/3.cpp)
add_executable(dataStructure_Main_glaph_4 graph/4.cpp)
add_executable(dataStructure_Main_glaph_5 graph/5.cpp)
add_executable(dataStructure_Main_glaph_6 graph/6.cpp)
add_executable(dataStructure_Main_glaph_7 graph/7.cpp)
add_executable(dataStructure_Main_glaph_8 graph/8.cpp)
add_executable(dataStructure_Main_glaph_9 graph/9.cpp)
add_executable(dataStructure_Main_glaph_10 graph/10.cpp)
add_executable(dataStructure_Main_glaph_11 graph/11.cpp)
add_executable(dataStructure_Main_glaph_12 graph/12.cpp)
add_executable(dataStructure_Main_glaph_13 graph/13.cpp)

#查找
add_executable(dataStructure_Main_search_1 search/1.cpp)
add_executable(dataStructure_Main_search_2 search/2.cpp)
add_executable(dataStructure_Main_search_3 search/3.cpp)
add_executable(dataStructure_Main_search_4 search/4.cpp)
add_executable(dataStructure_Main_search_5 search/5.cpp)
add_executable(dataStructure_Main_search_6 search/6.cpp)
add_executable(dataStructure_Main_search_7 search/7.cpp)
add_executable(dataStructure_Main_search_8 search/8.cpp)

#排序
add_executable(dataStructure_Main_sort_1 sort/1.cpp)
add_executable(dataStructure_Main_sort_2 sort/2.cpp)
add_executable(dataStructure_Main_sort_3 sort/3.cpp)
add_executable(dataStructure_Main_sort_4 sort/4.cpp)
add_executable(dataStructure_Main_sort_5 sort/5.cpp)
add_executable(dataStructure_Main_sort_6 sort/6.cpp)
add_executable(dataStructure_Main_sort_7 sort/7.cpp)
add_executable(dataStructure_Main_sort_8 sort/8.cpp)
